Fixed jumping elements of navigation

--- a/styles/main-navigation.css
+++ b/styles/main-navigation.css
@@ -27,7 +27,7 @@
     display: flex;
     margin: 0 auto;
     list-style: none;
-    /* align-items: center; */
+    align-items: center;
     transition: 0.5s;
     transition-property: opacity, transform;
 }
@@ -49,8 +49,14 @@
     padding: 5px 0;
     position: relative;
 }
-.main-navigation__link:hover {
-    border-bottom: 2px solid #FFF;
+.main-navigation__link:hover::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: #FFF;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 .main-navigation__menu-button {
     display: none;
